tests/ui/rfc-2005-default-binding-mode/slice.rs
pub fn main() {
    let sl: &[u8] = b"foo";

    match sl { //~ ERROR match is non-exhaustive
        [first, remainder @ ..] => {},
    };
}
